# ChangeLog for sys-power/iasl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/iasl/ChangeLog,v 1.35 2011/11/07 11:30:29 robbat2 Exp $

  07 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> iasl-20110922.ebuild,
  +files/iasl-20110922-parallelmake-003.patch:
  Bug #389799: more parallel make problems.

*iasl-20110922 (07 Nov 2011)

  07 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +iasl-20110922.ebuild,
  +files/iasl-20110922-as-needed.patch, +files/iasl-20110922-locale.patch,
  +files/iasl-20110922-parallelmake-001.patch,
  +files/iasl-20110922-parallelmake-002.patch:
  Version bump, bug #347019.

  30 Sep 2011; Mike Frysinger <vapier@gentoo.org> iasl-20060912.ebuild,
  iasl-20080514.ebuild, iasl-20080701.ebuild, iasl-20090123.ebuild,
  iasl-20090521.ebuild, iasl-20090903.ebuild, iasl-20091013.ebuild,
  iasl-20100428.ebuild, iasl-20100528.ebuild:
  Drop die with edos2unix since it does it for us now.

*iasl-20100528 (18 Jun 2010)

  18 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> +iasl-20100528.ebuild:
  Bug #322611: version bump

*iasl-20100428 (04 May 2010)

  04 May 2010; Robin H. Johnson <robbat2@gentoo.org> +iasl-20100428.ebuild,
  +files/iasl-20100428-parallelmake.patch:
  Bug #318217: Version bump.

*iasl-20091013 (23 Oct 2009)

  23 Oct 2009; Robin H. Johnson <robbat2@gentoo.org> +iasl-20091013.ebuild:
  Version bump.

  07 Oct 2009; nixnut <nixnut@gentoo.org> iasl-20090123.ebuild:
  ppc stable #271248

*iasl-20090903 (30 Sep 2009)

  30 Sep 2009; Robin H. Johnson <robbat2@gentoo.org> +iasl-20090903.ebuild,
  +files/iasl-locale.patch:
  Version bump. Also fix bug #286499 for Turkish locales.

  31 Jul 2009; Robin H. Johnson <robbat2@gentoo.org> iasl-20080514.ebuild,
  iasl-20080701.ebuild, iasl-20090123.ebuild, iasl-20090521.ebuild:
  Bug #278730.

  29 May 2009; Steve Dibb <beandog@gentoo.org> iasl-20090123.ebuild:
  amd64 stable, bug 271248
