@@ -18,6 +18,7 @@ DIST acpica-unix-20091013.tar.gz 957187 RMD160 8208761bd280e9c9cafa9538d7ebb21ae
 DIST acpica-unix-20100428.tar.gz 1039493 RMD160 59a8eaea119510cfa7dc0b8de40fbc9e848a015c SHA1 5ff8ec6b672ff71ae27e5ae700684c643d4dbdd6 SHA256 2e0cdd1bdc3c3fd3f701c19a8bb2e089e6feb23d3a19068b102ffa492b1dc4f5
 DIST acpica-unix-20100528.tar.gz 1058661 RMD160 03150071fc016e0f255349fea6b10a44f261042e SHA1 b36e2ffdd9fc169ea3084ab95341b01a9380b21e SHA256 f3af776f968c29daa4f061d594d641297f3838805307d243385785b7326d324c
 DIST acpica-unix-20110922.tar.gz 1158701 RMD160 fd1870b1a5cb9cbcbd84b4e157ba027ce8ce0b7d SHA1 fd27530a4223704968781fe333af7a04dab7b57e SHA256 3d135db9b7b1811ddc799436e8ec665bca83ae55810e74c9b1d405aec4536aeb
+DIST acpica-unix-20111123.tar.gz 1215254 RMD160 e6647999b2d790a11dcfb4434869e4e199a7845d SHA1 5dbdf9a686fcaf558c273bf9f14344e9a9de3c0d SHA256 7da3e1ed30666b4f714d47a62a54e3a4c68dbb1656fa6322a4c300c4a71c893c
 DIST acpitests-unix-20080514.tar.gz 1898223 RMD160 16075cb2f69ab0ef0b8388b79186c8c000a1722f SHA1 1a2f41fe75cc32d32661fcaa6f1c6e4aca3455eb SHA256 6e43826295874c6dbd17cd7e4fbacfcd6a2d1581626591c797ee5d94d59faa86
 DIST acpitests-unix-20080701.tar.gz 1880102 RMD160 23b7b14c6f518b14ce7786d12a55debe78b997f2 SHA1 6be97af198917a0168f89178316e8b79715a15ac SHA256 8dc21976da4d2ee8e4cff6cd6b807c5dcfbbdbe0ec0562d0d435b7563680bdb5
 DIST acpitests-unix-20090123.tar.gz 1880717 RMD160 a8aea45b2d5ec2050db4cb2d474c55ff14a196b1 SHA1 eccb018d4fad73be67a34ac0848b23be575518be SHA256 d46788816bf677601ad050280260db5f04ddd30f7e2b131e2fc4f26f256de290
@@ -27,6 +28,7 @@ DIST acpitests-unix-20091013.tar.gz 1949552 RMD160 4c0b160c920844f19a9fa5d6392b6
 DIST acpitests-unix-20100428.tar.gz 1928864 RMD160 9799d136c2a7abbb52d036e5adf2a7a2731ec439 SHA1 d472bb311b5600508f7192badb64f0920f7a6cac SHA256 fbee4a4aff7c82d3209d7320df5a5baae7c0f8167c18fdf7767def652f295bd9
 DIST acpitests-unix-20100528.tar.gz 1951819 RMD160 836beeae14d5b6299303d6b1718fa777acfcc906 SHA1 408689675a0cc2730d201d65ba10bb54d7ee982c SHA256 baf446881e7ef872f8182fcaf45b59e93ff11cbe82b78aca4f51b6ca43c3dcbf
 DIST acpitests-unix-20110922.tar.gz 1952379 RMD160 3e27d31617ee9df938f8546fd0879d5e3bf2b761 SHA1 0277119818ef63dfd9829e7f57c1defdf0bfd1c6 SHA256 7d72780f255261a705de9064123e6f720fbaaec93966149427c3ba63a323ee33
+DIST acpitests-unix-20111123.tar.gz 1953382 RMD160 b4d4c6135cebeb73ae8c6c1171b8534e38a2978e SHA1 19e44dd940b5671bcfc2bcc45daf9943a8331f52 SHA256 41b1667519c675cad61f09102ea6242daa8f5a803c3390a086d86b2c0fc35e8c
 EBUILD iasl-20060912.ebuild 1162 RMD160 cd89a814d40ed5a26d62d75e254ff73efaefb997 SHA1 8db52dc7c2802b9d6d2f2910385d19bc3b369be6 SHA256 3863e70838f88d0edddb4953f2ed9df389fe146fb23ff09f18e7ec20c69d962f
 EBUILD iasl-20080514.ebuild 3180 RMD160 bc50b0dd0a1f4f91a760f171c7ac8f3b671637cd SHA1 a9aa30088a8609d05660fa5c9edb54d0ccea645f SHA256 75c5c70a4d279afbcc94c229e822392aa5d1672afcadf530267bc4f093dbab00
 EBUILD iasl-20080701.ebuild 3273 RMD160 451045f267a508186f490a3b31db0681127c4483 SHA1 5aa7857c09a55389398d7d4cd98fbb96babcfac2 SHA256 6dc3be862f247174307787fcf1a319573c21931c35589b2886e69d195d3e6744
@@ -37,5 +39,6 @@ EBUILD iasl-20091013.ebuild 3433 RMD160 974f4531f6f4104efdc14742dc70244f295425da
 EBUILD iasl-20100428.ebuild 3433 RMD160 b31017fb137414c200cfa081eb195c7da24b65d1 SHA1 316afcf91ce3de5ca16fcb0b7b8046fdfc3a163a SHA256 15932b282475afc5ea7f969f03dae5e43eda8a2b530576a2e77b4c6d076bf583
 EBUILD iasl-20100528.ebuild 3433 RMD160 8b051df52db29638c4667e03aa15ab8213a4a3a6 SHA1 dc87a8064cb404c182b3a75fba8e785fdcdc63aa SHA256 40b6481ad1d9a8431c55a7a33197917534f18de117ec1215fba58746f54cc0ff
 EBUILD iasl-20110922.ebuild 3611 RMD160 534cbb6e1695d326e22863c39b815ba19cd12e39 SHA1 7606a6f779da1df67428697ccf3b1244eebcae09 SHA256 864eb5dc2ccd33c1919e731bbe8fa2d13860b5ef7622531a220bb35e35d3f1da
-MISC ChangeLog 5917 RMD160 0a8d9c873aab38d6e0888e61383e0918ffb5a9e5 SHA1 d68bec16eaf6f96b674e41abb05f008e2df3e84f SHA256 0fc3d6cee3e31d410cdd5d665635c3faf8209cde1049b55ed5a47dcb26603e4f
+EBUILD iasl-20111123.ebuild 3611 RMD160 770519f8b50443af1d559b0dbe207676f07d3619 SHA1 fdd769dc805e6e4e4242765f782568f994bc2737 SHA256 cdacff6f883da1ad302cdabb77186f801102d35f69fc76d4460929c6c52882b9
+MISC ChangeLog 6053 RMD160 a9ca186c5cc0db5a7f0754d8757d63a88fb8b7d0 SHA1 238afcee9904d21c83793d4742af98011c67cd76 SHA256 df5c84ab680ece242f14acba593cbda2ac163c4de6eb395ae1020e1069b40891
 MISC metadata.xml 202 RMD160 ca69c6e7044d6681415f1e86a1c084f890ff08ef SHA1 62ab18bf0e1da311494ca0912e5a79daeceb46ad SHA256 76dbb4a720140d78f0ddfb2b2782c03852169c201c1f507eb17ef4d2a82f212a
